<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>asteroid_mining_conversions</name>
    <version>0.0.0</version>
    <description>Convenience functions to convert between asteroid mining base and ROS types.</description>
    <license>Apache 2.0</license>

    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>asteroid_mining</depend>
    <depend>asteroid_mining_interfaces</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
