<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>asteroid_mining_interfaces</name>
    <version>0.0.0</version>
    <description>The interfaces for the asteroid mining ROS network implementation.</description>
    <license>Apache 2.0</license>

    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>builtin_interfaces</depend>
    <depend>geometry_msgs</depend>
    <depend>rosidl_default_generators</depend>
    <depend>std_msgs</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>